[metadata]
name = ritsar
long_description = file: README.md
keywords = SAR
description='Synthetic Aperture Radar (SAR) Image Processing Toolbox for Python',
author='Douglas Macdonald',
author_email='dm6718@g.rit.edu',
url='https://github.com/dm6718/RITSAR/',
license = MIT
classifiers =
    Programming Language :: Python :: 3 :: Only

[options]
install_requires =
	numpy >= 1.20
	matplotlib >= 3.3
    pyqt5
    spectral
    scipy
packages = find:
package_dir =
    = .
python_requires = >=3.9
setup_requires =
    wheel >= 0.36

[options.packages.find]
where = .
